alignment issues

--- a/app/assets/stylesheets/returns/ProductListItem.scss
+++ b/app/assets/stylesheets/returns/ProductListItem.scss
@@ -105,7 +105,6 @@
   position: relative;
   @include desktop {
     top: 25px;
-    margin: 30px 0;
   }
 }
 .Form__Container .select--marginTop {
